<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/dialog_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_message_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,RedundantDescriptionCheck"
        android:focusable="true" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:contentDescription="@string/avatar_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_gradient_height"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/my_name"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/online_status"
                style="@style/profile_info_style"
                android:text="@string/status_online"
                app:drawableLeftCompat="@drawable/ic_baseline_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <TextView
                android:id="@+id/position"
                style="@style/profile_info_style"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/online_status" />

            <TextView
                android:id="@+id/bio"
                style="@style/profile_info_style"
                android:text="@string/bio_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/position" />

            <TextView
                android:id="@+id/achievements"
                style="@style/profile_info_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/my_achievements"
                android:textStyle="italic"
                app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio" />

            <TextView
                android:id="@+id/phone_number"
                style="@style/profile_info_style"
                android:clickable="true"
                android:text="@string/my_number"
                app:drawableLeftCompat="@drawable/ic_baseline_local_phone_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievements"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/email"
                style="@style/profile_info_style"
                android:clickable="true"
                android:text="@string/my_email"
                app:drawableLeftCompat="@drawable/ic_baseline_email_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>